kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awesome-app-service
spec:
  selector:
    app: awesome-app
  ports:
    - port: 8080
      targetPort: 8080
