kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  ingressClassName: nginx
  rules:
    - host: www.app.engineerscentralhub.tech
      http:
        paths:
          - pathType: Prefix
            path: "/hello"
            backend:
              service:
                name: awesome-app
                port:
                  number: 8080
